src/parser/snapshots/rested__parser__error__tests__expected_closing_curly_after_expression_part_in_template_string-2.snap
---
source: src/parser/error.rs
description: "`wowee ${\"hello\"} error ahead ${variable_name`"
expression: ast
---
Program(
  source: "`wowee ${\"hello\"} error ahead ${variable_name`",
  items: [
    Expr(TemplateSringLiteral(
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 45,
          line: 0,
          col: 44,
        ),
      ),
      parts: [
        StringPart(StringLiteral(
          raw: "wowee ",
          value: "wowee ",
          span: Span(
            start: Position(
              value: 1,
              line: 0,
              col: 1,
            ),
            end: Position(
              value: 6,
              line: 0,
              col: 6,
            ),
          ),
        )),
        ExpressionPart(String(StringLiteral(
          raw: "\"hello\"",
          value: "hello",
          span: Span(
            start: Position(
              value: 9,
              line: 0,
              col: 9,
            ),
            end: Position(
              value: 15,
              line: 0,
              col: 15,
            ),
          ),
        ))),
        StringPart(StringLiteral(
          raw: " error ahead ",
          value: " error ahead ",
          span: Span(
            start: Position(
              value: 17,
              line: 0,
              col: 17,
            ),
            end: Position(
              value: 29,
              line: 0,
              col: 29,
            ),
          ),
        )),
        ExpressionPart(Identifier(Ok(Token(
          kind: Ident,
          text: "variable_name",
          start: Position(
            value: 32,
            line: 0,
            col: 32,
          ),
        )))),
        ExpressionPart(Error(ContextualError(
          inner_error: ExpectedToken(
            found: Token(
              kind: OpeningBackTick,
              text: "`",
              start: Position(
                value: 45,
                line: 0,
                col: 45,
              ),
            ),
            expected: RBracket,
          ),
          span: Span(
            start: Position(
              value: 0,
              line: 0,
              col: 0,
            ),
            end: Position(
              value: 45,
              line: 0,
              col: 45,
            ),
          ),
          message: None,
          context: ErrorSourceContext(
            above: None,
            line: "`wowee ${\"hello\"} error ahead ${variable_name`",
            below: None,
          ),
        ))),
      ],
    )),
  ],
)
