src/parser/snapshots/rested__parser__error__tests__expected_comma_before_more_parameters-2.snap
---
source: src/parser/error.rs
description: "env(\"\", false 12)"
expression: ast
---
Program(
  source: "env(\"\", false 12)",
  items: [
    Expr(Call(CallExpr(
      identifier: Ok(Token(
        kind: Ident,
        text: "env",
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
      )),
      arguments: ExpressionList(
        span: Span(
          start: Position(
            value: 3,
            line: 0,
            col: 3,
          ),
          end: Position(
            value: 17,
            line: 0,
            col: 17,
          ),
        ),
        exprs: [
          String(StringLiteral(
            raw: "\"\"",
            value: "",
            span: Span(
              start: Position(
                value: 4,
                line: 0,
                col: 4,
              ),
              end: Position(
                value: 6,
                line: 0,
                col: 6,
              ),
            ),
          )),
          Bool(Literal(
            value: "false",
            span: Span(
              start: Position(
                value: 8,
                line: 0,
                col: 8,
              ),
              end: Position(
                value: 13,
                line: 0,
                col: 13,
              ),
            ),
          )),
          Error(ContextualError(
            inner_error: ExpectedToken(
              found: Token(
                kind: Number,
                text: "12",
                start: Position(
                  value: 14,
                  line: 0,
                  col: 14,
                ),
              ),
              expected: Comma,
            ),
            span: Span(
              start: Position(
                value: 8,
                line: 0,
                col: 8,
              ),
              end: Position(
                value: 16,
                line: 0,
                col: 16,
              ),
            ),
            message: None,
            context: ErrorSourceContext(
              above: None,
              line: "env(\"\", false 12)",
              below: None,
            ),
          )),
        ],
      ),
    ))),
  ],
)
