src/parser/snapshots/rested__parser__error__tests__expected_comma_before_more_parameters.snap
---
source: src/parser/error.rs
description: "env(\"base\" \"url\")"
expression: ast
---
Program(
  source: "env(\"base\" \"url\")",
  items: [
    Expr(Call(CallExpr(
      identifier: Ok(Token(
        kind: Ident,
        text: "env",
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
      )),
      arguments: ExpressionList(
        span: Span(
          start: Position(
            value: 3,
            line: 0,
            col: 3,
          ),
          end: Position(
            value: 17,
            line: 0,
            col: 17,
          ),
        ),
        exprs: [
          String(StringLiteral(
            raw: "\"base\"",
            value: "base",
            span: Span(
              start: Position(
                value: 4,
                line: 0,
                col: 4,
              ),
              end: Position(
                value: 10,
                line: 0,
                col: 10,
              ),
            ),
          )),
          Error(ContextualError(
            inner_error: ExpectedToken(
              found: Token(
                kind: StringLiteral,
                text: "\"url\"",
                start: Position(
                  value: 11,
                  line: 0,
                  col: 11,
                ),
              ),
              expected: Comma,
            ),
            span: Span(
              start: Position(
                value: 4,
                line: 0,
                col: 4,
              ),
              end: Position(
                value: 16,
                line: 0,
                col: 16,
              ),
            ),
            message: None,
            context: ErrorSourceContext(
              above: None,
              line: "env(\"base\" \"url\")",
              below: None,
            ),
          )),
        ],
      ),
    ))),
  ],
)
