src/parser/snapshots/rested__parser__error__tests__expected_url_after_method-2.snap
---
source: src/parser/error.rs
description: post
expression: ast
---
Program(
  source: "post",
  items: [
    Request(
      method: POST,
      endpoint: Expr(Error(ContextualError(
        inner_error: ExpectedEitherOfTokens(
          found: Token(
            kind: End,
            text: "",
            start: Position(
              value: 4,
              line: 0,
              col: 3,
            ),
          ),
          expected: [
            Url,
            Pathname,
            StringLiteral,
            Ident,
          ],
        ),
        span: Span(
          start: Position(
            value: 0,
            line: 0,
            col: 0,
          ),
          end: Position(
            value: 4,
            line: 0,
            col: 3,
          ),
        ),
        message: None,
        context: ErrorSourceContext(
          above: None,
          line: "post",
          below: None,
        ),
      ))),
      block: None,
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 4,
          line: 0,
          col: 3,
        ),
      ),
    ),
  ],
)
