src/parser/snapshots/rested__parser__error__tests__expected_url_after_method.snap
---
source: src/parser/error.rs
expression: parser.parse()
---
Program(
  items: [
    Error(ContextualError(
      inner_error: ExpectedEitherOfTokens(
        found: ErroneousToken(
          kind: LBracket,
          text: "{",
        ),
        expected: [
          Url,
          Pathname,
        ],
      ),
      span: Span(
        start: Location(
          line: 0,
          col: 0,
        ),
        end: Location(
          line: 0,
          col: 5,
        ),
      ),
      message: None,
      context: ErrorSourceContext(
        above: None,
        line: "get {}",
        below: None,
      ),
    )),
  ],
)
