src/parser/snapshots/rested__parser__error__tests__expecting_commas_between_certain_json_items.snap
---
source: src/parser/error.rs
description: "let o = {\n                 yo: \"joe\"\n                 hello: \"world\"\n               }"
expression: ast
---
Program(
  source: "let o = {\n                 yo: \"joe\"\n                 hello: \"world\"\n               }",
  items: [
    Let(VariableDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "o",
        start: Position(
          value: 4,
          line: 0,
          col: 4,
        ),
      )),
      value: Object((Span(
        start: Position(
          value: 8,
          line: 0,
          col: 8,
        ),
        end: Position(
          value: 84,
          line: 3,
          col: 15,
        ),
      ), [
        Ok(ObjectEntry(
          key: Ok(StringLiteral(
            raw: "yo",
            value: "yo",
            span: Span(
              start: Position(
                value: 27,
                line: 1,
                col: 17,
              ),
              end: Position(
                value: 28,
                line: 1,
                col: 18,
              ),
            ),
          )),
          value: String(StringLiteral(
            raw: "\"joe\"",
            value: "joe",
            span: Span(
              start: Position(
                value: 31,
                line: 1,
                col: 21,
              ),
              end: Position(
                value: 35,
                line: 1,
                col: 25,
              ),
            ),
          )),
        )),
        Error(ContextualError(
          inner_error: ExpectedToken(
            found: Token(
              kind: Ident,
              text: "hello",
              start: Position(
                value: 54,
                line: 2,
                col: 17,
              ),
            ),
            expected: Comma,
          ),
          span: Span(
            start: Position(
              value: 31,
              line: 1,
              col: 21,
            ),
            end: Position(
              value: 58,
              line: 2,
              col: 21,
            ),
          ),
          message: None,
          context: ErrorSourceContext(
            above: Some("                 yo: \"joe\""),
            line: "                 hello: \"world\"",
            below: Some("               }"),
          ),
        )),
        Ok(ObjectEntry(
          key: Error(ContextualError(
            inner_error: ExpectedEitherOfTokens(
              found: Token(
                kind: Colon,
                text: ":",
                start: Position(
                  value: 59,
                  line: 2,
                  col: 22,
                ),
              ),
              expected: [
                Get,
                Post,
                Put,
                Patch,
                Delete,
                Header,
                Body,
                Set,
                Let,
                Null,
                Ident,
                StringLiteral,
              ],
            ),
            span: Span(
              start: Position(
                value: 59,
                line: 2,
                col: 22,
              ),
              end: Position(
                value: 59,
                line: 2,
                col: 22,
              ),
            ),
            message: None,
            context: ErrorSourceContext(
              above: Some("                 yo: \"joe\""),
              line: "                 hello: \"world\"",
              below: Some("               }"),
            ),
          )),
          value: Error(ContextualError(
            inner_error: ExpectedToken(
              found: Token(
                kind: StringLiteral,
                text: "\"world\"",
                start: Position(
                  value: 61,
                  line: 2,
                  col: 24,
                ),
              ),
              expected: Colon,
            ),
            span: Span(
              start: Position(
                value: 59,
                line: 2,
                col: 22,
              ),
              end: Position(
                value: 67,
                line: 2,
                col: 30,
              ),
            ),
            message: None,
            context: ErrorSourceContext(
              above: Some("                 yo: \"joe\""),
              line: "                 hello: \"world\"",
              below: Some("               }"),
            ),
          )),
        )),
      ])),
    )),
  ],
)
