src/parser/snapshots/rested__parser__error__tests__expecting_expression_error_for_parameter_of_unfinished_string-2.snap
---
source: src/parser/error.rs
description: "\nlet b = [env(\")]\n"
expression: ast
---
Program(
  source: "\nlet b = [env(\")]\n",
  items: [
    Let(VariableDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "b",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: Array(ExpressionList(
        span: Span(
          start: Position(
            value: 9,
            line: 1,
            col: 8,
          ),
          end: Position(
            value: 18,
            line: 1,
            col: 16,
          ),
        ),
        exprs: [
          Call(CallExpr(
            identifier: Ok(Token(
              kind: Ident,
              text: "env",
              start: Position(
                value: 10,
                line: 1,
                col: 9,
              ),
            )),
            arguments: ExpressionList(
              span: Span(
                start: Position(
                  value: 13,
                  line: 1,
                  col: 12,
                ),
                end: Position(
                  value: 18,
                  line: 1,
                  col: 16,
                ),
              ),
              exprs: [
                Error(ContextualError(
                  inner_error: ExpectedEitherOfTokens(
                    found: Token(
                      kind: UnfinishedStringLiteral,
                      text: "\")]",
                      start: Position(
                        value: 14,
                        line: 1,
                        col: 13,
                      ),
                    ),
                    expected: [
                      Ident,
                      StringLiteral,
                      Boolean,
                      Number,
                      LBracket,
                      LSquare,
                      Null,
                    ],
                  ),
                  span: Span(
                    start: Position(
                      value: 14,
                      line: 1,
                      col: 13,
                    ),
                    end: Position(
                      value: 17,
                      line: 1,
                      col: 16,
                    ),
                  ),
                  message: None,
                  context: ErrorSourceContext(
                    above: Some(""),
                    line: "let b = [env(\")]",
                    below: None,
                  ),
                )),
                Error(ContextualError(
                  inner_error: ExpectedToken(
                    found: Token(
                      kind: End,
                      text: "",
                      start: Position(
                        value: 18,
                        line: 1,
                        col: 16,
                      ),
                    ),
                    expected: Comma,
                  ),
                  span: Span(
                    start: Position(
                      value: 14,
                      line: 1,
                      col: 13,
                    ),
                    end: Position(
                      value: 18,
                      line: 1,
                      col: 16,
                    ),
                  ),
                  message: None,
                  context: ErrorSourceContext(
                    above: Some(""),
                    line: "let b = [env(\")]",
                    below: None,
                  ),
                )),
              ],
            ),
          )),
          Error(ContextualError(
            inner_error: ExpectedToken(
              found: Token(
                kind: End,
                text: "",
                start: Position(
                  value: 18,
                  line: 1,
                  col: 16,
                ),
              ),
              expected: Comma,
            ),
            span: Span(
              start: Position(
                value: 18,
                line: 1,
                col: 16,
              ),
              end: Position(
                value: 18,
                line: 1,
                col: 16,
              ),
            ),
            message: None,
            context: ErrorSourceContext(
              above: Some(""),
              line: "let b = [env(\")]",
              below: None,
            ),
          )),
        ],
      )),
    )),
  ],
)
